--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@autoschedule/cake-time",
+  "name": "@autoschedule/cake-time-front",
   "version": "0.0.0",
   "description": "Cake Time!",
   "main": "dist/index.bundle.js",
