--- a/back/package.json
+++ b/back/package.json
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/AutoScheduleJS/cake-time#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "path": "^0.12.7",
-    "body-parser": "^1.18.3"
+    "neo4j-driver": "^1.5.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
