--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -31,7 +31,7 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "moduleResolution": "node",
-    "baseUrl": "./",
+    "baseUrl": "./"
   },
   "exclude": [
     "node_modules"
