chore: update packages

--- a/front/package.json
+++ b/front/package.json
@@ -15,29 +15,30 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "emotion": "^9.2.6",
-    "emotion-theming": "^9.2.6",
-    "prop-types": "^15.6.2",
+    "@emotion/core": "^10.0.10",
+    "emotion": "^10.0.9",
+    "emotion-theming": "^10.0.10",
+    "prop-types": "^15.7.2",
     "react-spring": "^5.7.2"
   },
   "devDependencies": {
-    "@types/react": "^16.7.17",
-    "@types/react-dom": "^16.0.11",
+    "@types/react": "^16.8.10",
+    "@types/react-dom": "^16.8.3",
     "babel-core": "^6.26.3",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.5.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "del-cli": "^1.1.0",
-    "parcel-bundler": "^1.10.3",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "rxjs": "^6.3.3",
-    "rxjs-tslint": "^0.1.6",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.17.0",
+    "parcel-bundler": "^1.12.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "rxjs": "^6.4.0",
+    "rxjs-tslint": "^0.1.7",
+    "tslint": "^5.14.0",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.2.2",
+    "typescript": "^3.3.4000",
     "typescript-styled-plugin": "^0.12.0"
   }
 }
